# candidate-rnk-ai

./: .gitignore  LICENSE  PROJECT.md  RATE_LIMIT_SOLUTION.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_default.bat  sample_job_description.txt
src/: __init__.py  job_parser.py  ranking.py  scorer.py  utils.py
src/behavioral/: __init__.py  scorer.py
src/embeddings/: __init__.py  bm25_index.py  encoder.py  hybrid_searcher.py
src/llm/: __init__.py  client.py  prompt_templates.py
