[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redrobe-ranking"
version = "1.0.0"
description = "AI-powered candidate ranking system that goes beyond keyword matching"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Redrobe AI Challenge"}
]
python_requires = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "python-docx>=0.8.11",
]

[project.urls]
Homepage = "https://github.com/redrobe-ai/challenge"
Repository = "https://github.com/redrobe-ai/challenge"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
